# DREMTubes

./: +  .gitignore  .gitmodules  CMakeLists.txt  DREMTubes.cc  DREMTubes_gui.mac  DREMTubes_init_vis.mac  DREMTubes_run.mac  LICENSE  README.md
B4a/: cmake_install.cmake  exampleB4a.cc  myrun.mac
DREMTubes/: .gitignore  CMakeLists.txt  DREMTubes.cc  DREMTubes_init_vis.mac  DREMTubes_run.mac  GNUmakefile  README.md
DreamDaq/: .dreamdaqrc  MakeAllDreamDaq  Makefile  channels.h  cleanhand.sh  doOfflineHisto.c  dreammon.c  dreammon.h  dreammon_adc.h  drs4command.list  drs4command.list.new  enableOnOff.cpp  fixLostTriggers.cpp  guiStart.cpp  makedeps  mapping.h  myDataWriter.cpp  myDecode.cpp  myDecode.h  myFileChecker.cpp  myReadOut.cpp  myReadOut.cpp.lastused  myReadOut.cpp.morevts  myReadOutCosmics.cpp  myReadOutDesy.cpp  myReadOutNoStop.cpp  myReadOutSPS2021.cpp  myReadOutTDC.cpp  myReadOut_old.cpp  myTestReadout.cpp  myhbook.h  pulseOut.cpp  pulserVme.cpp  readConf.cxx  reader.cpp  realign.cpp  run.sh  sampler.cpp  setV258.cpp  setV258thr.cpp  (+12 more)
DreamDaq/FSM/: Makefile  (+3 more)
TBDataPreparation/: README.md
include/: B4PrimaryGeneratorAction.hh  B4RunAction.hh  B4aActionInitialization.hh  B4aEventAction.hh  B4aSteppingAction.hh  DREMTubesActionInitialization.hh  DREMTubesDetectorConstruction.hh  DREMTubesEventAction.hh  DREMTubesOpticalPhysics.hh  DREMTubesPhysicsList.hh  DREMTubesPrimaryGeneratorAction.hh  DREMTubesRunAction.hh  DREMTubesSteppingAction.hh  OpticalPhysics.hh
scripts/: DREMTubes_HTCondor_10.7.p01.sh  DREMTubes_lxplus_10.7.p01.sh
src/: B4DetectorConstruction.cc  B4RunAction.cc  B4aActionInitialization.cc  B4aEventAction.cc  B4aSteppingAction.cc  DREMTubesActionInitialization.cc  DREMTubesDetectorConstruction.cc  DREMTubesEventAction.cc  DREMTubesOpticalPhysics.cc  DREMTubesPhysicsList.cc  DREMTubesPrimaryGeneratorAction.cc  DREMTubesRunAction.cc  DREMTubesSteppingAction.cc
(+577 files in other folders)
